infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-website-builder
  labels:
    name: smart-website-builder
    environment: production
